--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "DChill42",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@mdi/js": "^5.6.55",
     "@mdi/react": "^1.4.0",
     "classnames": "^2.2.6",
